# cim-domain-graph

./: Cargo.toml  README.md  flake.nix  readme.md
doc/: api.md  graph-abstraction-architecture.md  graph-abstraction-quickstart.md  user-stories.md
examples/: graph_abstraction_demo.rs  graph_abstraction_integration_demo.rs  graph_composition_demo.rs  graph_operations.rs  graph_transformation_demo.rs  large_graph_performance_demo.rs
src/: domain_events.rs  lib.rs  plugin.rs
src/abstraction/: composition.rs  composition_test.rs  integration.rs  mod.rs  transformations.rs  transformations_test.rs
src/abstraction/adapters/: concept_adapter.rs  context_adapter.rs  ipld_adapter.rs  mod.rs  workflow_adapter.rs
src/aggregate/: abstract_graph.rs  business_graph.rs  concept_graph.rs  domain_graph.rs  mod.rs
src/bridge/: graph_bridge.rs  mod.rs
src/commands/: mod.rs
src/components/: edge.rs  graph.rs  mod.rs  node.rs  spatial.rs  visual.rs  workflow.rs
src/deployment/: edge_types.rs  graph_adapter.rs  mod.rs  node_types.rs  translator.rs  validation.rs
src/events/: graph_events.rs  mod.rs
src/handlers/: abstract_event_handler.rs  abstract_handler.rs  event_publishing_handler.rs  mod.rs  unified_handler.rs
src/infrastructure/: event_repository_impl.rs  mod.rs  query_repository_impl.rs  unified_repository_impl.rs
src/layout/: advanced_layouts.rs  mod.rs
src/performance/: batched_renderer.rs  frustum_culling.rs  graph_partitioning.rs  incremental_layout.rs  level_of_detail.rs  mod.rs  spatial_acceleration.rs
src/projections/: edge_list.rs  graph_summary.rs  mod.rs  node_list.rs
src/queries/: abstract_query_handler.rs  mod.rs  query_result_publisher.rs  result_publisher.rs
src/systems/: advanced_layout_system.rs  edge_management.rs  layout.rs  lifecycle.rs  mod.rs  node_management.rs  queries.rs  query.rs  spatial.rs  workflow.rs
src/value_objects/: mod.rs
tests/: ecs_integration.rs  graph_tests.rs
