[package]
name = "cim-domain-graph"
version = "0.2.0"
edition = "2021"
authors = ["The CowboyAI Team"]
description = "Graph domain for the Composable Information Machine - Core composition layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-domain-graph"
keywords = ["graph", "domain", "ddd", "event-sourcing", "cim", "composition"]
categories = ["data-structures", "asynchronous"]

[[bin]]
name = "generate-domain-graph"
path = "src/bin/generate_domain_graph.rs"

[dependencies]
# Core dependencies
cim-domain = { path = "../cim-domain" }
cim-infrastructure = { path = "../cim-infrastructure" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.7"

# Graph library
petgraph = { version = "0.6", features = ["serde-1"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
