[package]
name = "cim-domain-graph"
version = "0.1.0"
edition = "2021"
authors = ["The CowboyAI Team"]
description = "Graph domain for the Composable Information Machine - Abstract graph layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-domain-graph"
keywords = ["graph", "domain", "ddd", "event-sourcing", "cim", "composition"]
categories = ["data-structures", "asynchronous"]

[[bin]]
name = "generate-domain-graph"
path = "src/bin/generate_domain_graph.rs"

[dependencies]
# Core dependencies
cim-domain = { path = "../cim-domain" }
cim-infrastructure = { path = "../cim-infrastructure" }
cim-contextgraph = { path = "../cim-contextgraph" }
cim-conceptgraph = { path = "../cim-conceptgraph" }
cim-workflow-graph = { path = "../cim-workflow-graph" }
cim-ipld-graph = { path = "../cim-ipld-graph" }
cim-domain-workflow = { path = "../cim-domain-workflow" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.0", features = ["v4", "serde"] }
cid = "0.11"
blake3 = "1.5"
multihash = "0.19"

# Collections
indexmap = "2.7"

# Graph library
petgraph = { version = "0.6", features = ["serde-1"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
